--- a/text/tex/OpticalLocalization_BednarikJan.tex
+++ b/text/tex/OpticalLocalization_BednarikJan.tex
@@ -161,18 +161,30 @@
 }
 
 %Abstrakt (cesky, slovensky ci anglicky)
-\abstract[cs]{Tato práce popisuje návrh pasivního systému pro optickou lokalizaci leteckých objektů ve vícekamerovém systému schopném autonomně určit globální geografickou pozici sledovaného objektu. Systém staví na využití několika stanic s pozicovatelnými kamerami, přičemž jsou stanice vhodně rozmístěny v daném prostředí. Každá kamerová jednotka provádí detekci a sledování a zasílá data ostatním jednotkám, díky čemuž je možné triangulovat pozici sledovaného objektu. V práci je popsán navržený model kamerové jednotky, rovněž je vysvětlen a proveden proces rektifikace, jehož účelem je redukovat odchylku mezi modelem a reálnou konstrukcí kamerové jednotky. Diskutovány jsou rovněž různé techniky pro vizuální detekci a sledování objektů a jsou vybrány nejvhodnější z nich z hlediska potřeb navrhovaného systému. Dále je popsán návrh, částečná implementace a simulace systému ve fyzikálním simulátoru. V závěru jsou shrnuty další kroky nezbytné pro úspěšný vývoj systému.}
-\abstract[en]{This work presents the passive multi-camera optical localization system suitable for autonomous estimation of the global geographical position of the aerial objects. The system utilizes multiple stations with positionable cameras properly placed within the environment. Each camera unit performs detection and tracking and exchanges the information with each other in order to triangulate the target. In the work the proposed model of the camera unit was described and a rectification process reducing the deviation between the model and the construction of the unit was explained and performed. Various visual detection and tracking approaches were discussed and the most suitable ones were proposed for the final solution. The system was designed, partially implemented and simulated in a physical simulator. The next steps necessary for the successful development of the system were eventually summarized.}
+\abstract[cs]{
+%	Tato práce popisuje návrh pasivního systému pro optickou lokalizaci leteckých objektů ve vícekamerovém systému schopném autonomně určit globální geografickou pozici sledovaného objektu. Systém staví na využití několika stanic s pozicovatelnými kamerami, přičemž jsou stanice vhodně rozmístěny v daném prostředí. Každá kamerová jednotka provádí detekci a sledování a zasílá data ostatním jednotkám, díky čemuž je možné triangulovat pozici sledovaného objektu. V práci je popsán navržený model kamerové jednotky, rovněž je vysvětlen a proveden proces rektifikace, jehož účelem je redukovat odchylku mezi modelem a reálnou konstrukcí kamerové jednotky. Diskutovány jsou rovněž různé techniky pro vizuální detekci a sledování objektů a jsou vybrány nejvhodnější z nich z hlediska potřeb navrhovaného systému. Dále je popsán návrh, částečná implementace a simulace systému ve fyzikálním simulátoru. V závěru jsou shrnuty další kroky nezbytné pro úspěšný vývoj systému.
+	}
+\abstract[en]{
+%	This work presents the passive multi-camera optical localization system suitable for autonomous estimation of the global geographical position of the aerial objects. The system utilizes multiple stations with positionable cameras properly placed within the environment. Each camera unit performs detection and tracking and exchanges the information with each other in order to triangulate the target. In the work the proposed model of the camera unit was described and a rectification process reducing the deviation between the model and the construction of the unit was explained and performed. Various visual detection and tracking approaches were discussed and the most suitable ones were proposed for the final solution. The system was designed, partially implemented and simulated in a physical simulator. The next steps necessary for the successful development of the system were eventually summarized.
+	}
 
 %Klicova slova (cesky, slovensky ci anglicky)
-\keywords[cs]{optická lokalizace, lokalizace více kamerami, stereovize, detekce objektů, sledování objektů, triangulace, letecké objekty, UAV, fyzikální simuace, ROS, Gazebo, kinematický řetězec, rektifikace kamery}
-\keywords[en]{optical localization, mutli camera localization, stereovision, object detection, object tracking, triangulation, aerial objects, UAV, physical simulation, ROS, Gazebo, kinematic chain, camera rectification}
+\keywords[cs]{
+%	optická lokalizace, lokalizace více kamerami, stereovize, detekce objektů, sledování objektů, triangulace, letecké objekty, UAV, fyzikální simuace, ROS, Gazebo, kinematický řetězec, rektifikace kamery
+	}
+\keywords[en]{
+%	optical localization, mutli camera localization, stereovision, object detection, object tracking, triangulation, aerial objects, UAV, physical simulation, ROS, Gazebo, kinematic chain, camera rectification
+	}
 
 %Prohlaseni (u anglicky psane prace anglicky, u slovensky psane prace slovensky)
-\declaration{TODO -> napsat anglicky! Prohlašuji, že jsem tuto bakalářskou práci vypracoval samostatně pod vedením pana prof. Ing. Adama Herouta, Ph.D. Uvedl jsem všechny literární prameny a publikace, ze kterých jsem čerpal.}
+\declaration{
+%	TODO -> napsat anglicky! Prohlašuji, že jsem tuto bakalářskou práci vypracoval samostatně pod vedením pana prof. Ing. Adama Herouta, Ph.D. Uvedl jsem všechny literární prameny a publikace, ze kterých jsem čerpal.
+	}
 
 %Podekovani (nepovinne, nejlepe v jazyce prace)
-\acknowledgment{TODO -> napsat anglicky! V této sekci je možno uvést poděkování vedoucímu práce a těm, kteří poskytli odbornou pomoc (externí zadavatel, konzultant, apod.).}
+\acknowledgment{
+%	TODO -> napsat anglicky! V této sekci je možno uvést poděkování vedoucímu práce a těm, kteří poskytli odbornou pomoc (externí zadavatel, konzultant, apod.).
+	}
 
 \begin{document}
   % Vysazeni titulnich stran
